# -Multi-Lingual-Transcription

./: .gitattributes  .gitignore  deploy.sh  nginx.conf  render.yaml  vercel.json
backend/: .env.example  config.py  debug_whisper.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py  transcription.py
backend/app/api/websocket/: live.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/infrastructure/: audio.py  whisper.py  ytdlp.py
backend/app/models/: job.py
backend/app/repositories/: interfaces.py  job_repository.py
backend/app/schemas/: job.py
backend/app/services/: interfaces.py  live_service.py  transcription_service.py
backend/app/utils/: formatters.py
backend/routers/: transcription.py  websocket.py
backend/services/: audio_service.py  gcs_service.py  speech_service.py  youtube_service.py
backend/utils/: formatters.py
docs/: api.md  architecture.md  setup.md
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.jsx  App.vue
frontend/src/assets/: main.css
frontend/src/components/: CredentialsBanner.jsx  DownloadButtons.jsx  DownloadButtons.vue  FileUpload.jsx  FileUpload.vue  LiveTranscription.jsx  LiveTranscription.vue  TranscriptionDisplay.jsx  TranscriptionDisplay.vue  YoutubeUpload.vue
frontend/src/hooks/: usePolling.js  (+1 more)
tests/backend/: conftest.py  debug_whisper.py  test_formatters.py  test_health_endpoint.py  test_job_repository.py  test_ytdlp_validator.py
(+7 files in other folders)
