[project]
name = "dictation-app-backend"
version = "2.0.0"
description = "Multi-Lingual Video/Audio to Text Transcription API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
    "pydantic-settings==2.2.1",
    "aiofiles==23.2.1",
    "sqlalchemy[asyncio]==2.0.30",
    "aiosqlite==0.20.0",
    "alembic==1.13.1",
    "numpy>=1.26.0",
    "yt-dlp>=2024.12.06",
    "faster-whisper>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/backend"]
